--- a/Application/src/main/res/values/base-strings.xml
+++ b/Application/src/main/res/values/base-strings.xml
@@ -16,15 +16,10 @@
 -->
 
 <resources>
-    <string name="app_name">Camera2Basic</string>
+    <string name="app_name">Spycam</string>
     <string name="intro_message">
         <![CDATA[
-        
-            
-            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
-            you can display camera preview and take pictures.
-            
-        
+        PittBull\'s SpyCam
         ]]>
     </string>
 </resources>
